removed posicionesabiertasmysql